tests/invalid_submodules/undef_mod_qual.err_exp
undef_mod_qual.m:015: In clause for predicate `main'/2:
undef_mod_qual.m:015:   error: call to [38;5;203mundefined[39;49m predicate [38;5;87m`foo.bletchx'/2.[39;49m
undef_mod_qual.m:015:   [38;5;226m(Did you mean `bletch'?)[39;49m
